Fix SonarQube issues: ApplicationTests assertions, EmailService injection/locale/constants, PaymentResultTest constants